@@ -1,5 +1,0 @@
-help: libvfs-help.so
-ghelp: libvfs-help.so
-gnome-help: libvfs-help.so
-info: libvfs-translate.so -default-mime-type text/html -real-method pipe -pattern "gnome2-info2html %s"
-man: libvfs-translate.so -default-mime-type text/html -real-method pipe -pattern "gnome2-man2html %s"
