@@ -1,0 +1,5 @@
+help: libvfs-help.so
+ghelp: libvfs-help.so
+gnome-help: libvfs-help.so
+info: libvfs-translate.so -default-mime-type text/html -real-method pipe -pattern "@LIBEXECDIR@/gnome2-info2html %s"
+man: libvfs-translate.so -default-mime-type text/html -real-method pipe -pattern "@LIBEXECDIR@/gnome2-man2html %s"
