@@ -1,3 +1,11 @@
+2003-02-10  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* help-converters/gnome-vfs-module/Makefile.am:
+	* help-converters/gnome-vfs-module/help-methods.conf:
+	* help-converters/gnome-vfs-module/help-methods.conf.in:
+	be sure to generate help-methods.conf based on libexecdir value 
+	(bug #91169)
+
 2003-02-10  Mohammad DAMT  <mdamt@bisnisweb.com>
 
 	* po/id.po: Added Indonesian translation
